first new commit. Main changes-- testing tools no longer has validation scripts (since all cert requests are made in bgp_hijack). now config.json file, which in the future should contain all configurations, only one of which is the list of nodes. certificate requests were changed to google premium, google free, and open_mpic. state file was added to results folder, which all_attack.py uses to pick up on an interrupted attack.

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#sensitive info
+terraform/variables.tf
+terraform/terraform.tfstate*
+
+# unimportant
+screenlog.0
+scrap.txt
+results/logs/*
+results/state.json
+thoughts.md
