--- a/configure/config.template
+++ b/configure/config.template
@@ -7,7 +7,7 @@
         "YOUR_NODE_NAME": "YOUR_NODE_REGION",
         "YOUR_NODE_NAME_2": "YOUR_NODE_REGION_2"
     },
-    "vultr_api_key": "YRVVONN44IQY7ODUHGGSB4UVEZZ43LGW6Y3Q",
+    "vultr_api_key": "YOUR_VULTR_API_KEY",
     "open_mpic_api_key": "YOUR_OPEN_MPIC_API_KEY",
     "certificate_authorities": [
         {
